--- a/DataCuration.ipynb
+++ b/DataCuration.ipynb
@@ -2408,30 +2408,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3-Update Columns**"
+    "**3-Rename Columns**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_df['Year'] = clean_df['Date'].dt.year.astype(int) # Update Year Column And Change His Type\n",
-    "clean_df['Month_Name'] = clean_df['Date'].dt.month_name().astype(str) # Update Month Column And Change His Type\n",
-    "clean_df['Month'] = clean_df['Date'].dt.month.astype(str) # Update Month Column And Change His Type"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**4-Rename Columns**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2442,12 +2424,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5-Rename Product Brand, Type And Category**"
+    "**4-Rename Product Brand, Type And Category**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2460,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2493,7 +2475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2503,76 +2485,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**5-Update Columns**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_df['Year'] = clean_df['Date'].dt.year.astype(int) # Update Year Column And Change His Type\n",
+    "clean_df['Month_Name'] = clean_df['Date'].dt.month_name().astype(str) # Update Month Column And Change His Type\n",
+    "clean_df['Month'] = clean_df['Date'].dt.month.astype(str) # Update Month Column And Change His Type"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "female_clothing = [\n",
-    "    'Bodycon dress', 'Maxi dress', 'Sheath dress', 'A-line dress', \n",
-    "    'Shift dress', 'Crop top', 'Skorts', 'Blouse', \n",
-    "    'Fit and flare dress', 'Wrap dress', 'Cocktail dress', 'Sundress', 'High heels', 'Dress'\n",
-    "]\n",
-    "\n",
-    "for prod in female_clothing:\n",
-    "    clean_df.loc[(clean_df['Products'].str.contains(prod,  case=False, na=False)) | clean_df['Product_Type'].str.contains(prod,  case=False, na=False), 'Gender'] = 'Female' # Update Gender\n",
-    "\n",
-    "clean_df.loc[(clean_df['Products'].str.contains('Swim trunks')), 'Gender'] = 'Male' # Update Gender"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_age = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Age'].agg(lambda x: x.mode()[0])\n",
-    "clean_df['Age'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_age)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_name = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Name'].agg(lambda x: x.mode()[0])\n",
-    "clean_df['Name'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_customer_segement = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Customer_Segment'].agg(lambda x: x.mode()[0])\n",
-    "clean_df['Customer_Segment'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_customer_segement)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_city = clean_df.groupby(['Customer_ID', 'Country'])['City'].agg(lambda x: x.mode()[0])\n",
-    "clean_df['City'] = clean_df.set_index(['Customer_ID', 'Country']).index.map(mode_city)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_gender = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Gender'].agg(lambda x: x.mode()[0])\n",
-    "clean_df['Gender'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_gender)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2730,6 +2662,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_age = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Age'].agg(lambda x: x.mode()[0])\n",
+    "clean_df['Age'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_customer_segement = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Customer_Segment'].agg(lambda x: x.mode()[0])\n",
+    "clean_df['Customer_Segment'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_customer_segement)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_city = clean_df.groupby(['Customer_ID', 'Country'])['City'].agg(lambda x: x.mode()[0])\n",
+    "clean_df['City'] = clean_df.set_index(['Customer_ID', 'Country']).index.map(mode_city)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_gender = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Gender'].agg(lambda x: x.mode()[0])\n",
+    "clean_df['Gender'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_gender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "female_clothing = [\n",
+    "    'Bodycon dress', 'Maxi dress', 'Sheath dress', 'A-line dress', \n",
+    "    'Shift dress', 'Crop top', 'Skorts', 'Blouse', \n",
+    "    'Fit and flare dress', 'Wrap dress', 'Cocktail dress', 'Sundress', 'High heels', 'Dress'\n",
+    "]\n",
+    "\n",
+    "for prod in female_clothing:\n",
+    "    female_ = clean_df.loc[(clean_df['Products'].str.contains(prod,  case=True, na=False)) | clean_df['Product_Type'].str.contains(prod,  case=True, na=False), 'Customer_ID'].unique()\n",
+    "    clean_df.loc[(clean_df['Customer_ID'].isin(female_)), 'Gender'] = 'Female'\n",
+    "\n",
+    "male_ = clean_df.loc[(clean_df['Products'] == 'Swim trunks'), 'Customer_ID'].unique()\n",
+    "clean_df.loc[(clean_df['Customer_ID'].isin(male_)), 'Gender'] = 'Male' "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2738,7 +2730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2750,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2774,7 +2766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3306,7 +3298,7 @@
        "[302010 rows x 37 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3342,7 +3334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3874,7 +3866,7 @@
        "[302010 rows x 37 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3893,7 +3885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3909,7 +3901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3918,7 +3910,7 @@
        "array(['Male', 'Female'], dtype=object)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3937,7 +3929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3961,7 +3953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -3970,7 +3962,7 @@
        "0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4000,7 +3992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -4024,7 +4016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4067,7 +4059,7 @@
        "      <td>301980</td>\n",
        "      <td>59</td>\n",
        "      <td>England</td>\n",
-       "      <td>50964</td>\n",
+       "      <td>54099</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Country</th>\n",
@@ -4080,8 +4072,8 @@
        "      <th>Gender</th>\n",
        "      <td>301980</td>\n",
        "      <td>2</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>157651</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>159940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Income</th>\n",
@@ -4195,9 +4187,9 @@
       "text/plain": [
        "                   count unique           top    freq\n",
        "City              301980    130       Chicago   29530\n",
-       "State             301980     59       England   50964\n",
+       "State             301980     59       England   54099\n",
        "Country           301980      5           USA   95262\n",
-       "Gender            301980      2          Male  157651\n",
+       "Gender            301980      2        Female  159940\n",
        "Income            301980      3        Medium  130327\n",
        "Customer_Segment  301980      3       Regular  143278\n",
        "Month             301980     12             1   25655\n",
@@ -4215,7 +4207,7 @@
        "Age_Group         301980      7      Twenties  126636"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4226,7 +4218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4362,7 +4354,7 @@
        "Hour              6.000000     11.000000     18.000000     23.000000  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4380,7 +4372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -4415,7 +4407,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4433,7 +4425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -4442,7 +4434,7 @@
        "0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4460,7 +4452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -4495,7 +4487,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4506,7 +4498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -4551,7 +4543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -4585,7 +4577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
