--- a/DataCuration.ipynb
+++ b/DataCuration.ipynb
@@ -2508,6 +2508,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mode_age = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Age'].agg(lambda x: x.mode()[0])\n",
+    "clean_df['Age'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_customer_segement = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Customer_Segment'].agg(lambda x: x.mode()[0])\n",
+    "clean_df['Customer_Segment'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_customer_segement)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_city = clean_df.groupby(['Customer_ID', 'Country'])['City'].agg(lambda x: x.mode()[0])\n",
+    "clean_df['City'] = clean_df.set_index(['Customer_ID', 'Country']).index.map(mode_city)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "city_to_state = {\n",
     "    # USA\n",
     "    'San Jose': 'California',\n",
@@ -2663,47 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_age = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Age'].agg(lambda x: x.mode()[0])\n",
-    "clean_df['Age'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_age)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_customer_segement = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Customer_Segment'].agg(lambda x: x.mode()[0])\n",
-    "clean_df['Customer_Segment'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_customer_segement)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_city = clean_df.groupby(['Customer_ID', 'Country'])['City'].agg(lambda x: x.mode()[0])\n",
-    "clean_df['City'] = clean_df.set_index(['Customer_ID', 'Country']).index.map(mode_city)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mode_gender = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Gender'].agg(lambda x: x.mode()[0])\n",
-    "clean_df['Gender'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_gender)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2719,6 +2709,16 @@
     "\n",
     "male_ = clean_df.loc[(clean_df['Products'] == 'Swim trunks'), 'Customer_ID'].unique()\n",
     "clean_df.loc[(clean_df['Customer_ID'].isin(male_)), 'Gender'] = 'Male' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_gender = clean_df.groupby(['Customer_ID', 'Country', 'City'])['Gender'].agg(lambda x: x.mode()[0])\n",
+    "clean_df['Gender'] = clean_df.set_index(['Customer_ID', 'Country', 'City']).index.map(mode_gender)"
    ]
   },
   {
@@ -3903,21 +3903,9 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Male', 'Female'], dtype=object)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clean_df.drop_duplicates(inplace=True, ignore_index=True)\n",
-    "clean_df['Gender'].unique()"
+    "clean_df.drop_duplicates(inplace=True, ignore_index=True)"
    ]
   },
   {
@@ -4059,7 +4047,7 @@
        "      <td>301980</td>\n",
        "      <td>59</td>\n",
        "      <td>England</td>\n",
-       "      <td>54099</td>\n",
+       "      <td>50964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Country</th>\n",
@@ -4187,7 +4175,7 @@
       "text/plain": [
        "                   count unique           top    freq\n",
        "City              301980    130       Chicago   29530\n",
-       "State             301980     59       England   54099\n",
+       "State             301980     59       England   50964\n",
        "Country           301980      5           USA   95262\n",
        "Gender            301980      2        Female  159940\n",
        "Income            301980      3        Medium  130327\n",
@@ -4581,8 +4569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_df.to_csv('Clean_Retail_Data.csv', index = None)\n",
-    "\n"
+    "clean_df.to_csv('Clean_Retail_Data.csv', index = None)"
    ]
   },
   {
